force-app/main/default/objects/Log__c/fields/CPU__c.field-meta.xml
<CustomField>
    <fullName>CPU__c</fullName>
    <formula>CPU_Used__c /10000</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CPU %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>