force-app/main/default/objects/Log__c/fields/CreatedWithTime__c.field-meta.xml
<CustomField>
    <fullName>CreatedWithTime__c</fullName>
    <formula>CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CreatedWithTime</label>
    <type>DateTime</type>
</CustomField>