force-app/main/default/objects/Log__c/fields/DML__c.field-meta.xml
<CustomField>
    <fullName>DML__c</fullName>
    <formula>DML_Used__c / 150</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DML %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>