force-app/main/default/objects/Log__c/fields/DML_Rows__c.field-meta.xml
<CustomField>
    <fullName>DML_Rows__c</fullName>
    <formula>DML_Rows_Used__c / 50000</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DML Rows %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>