force-app/main/default/objects/Log__c/fields/Heap__c.field-meta.xml
<CustomField>
    <fullName>Heap__c</fullName>
    <formula>Heap_Used__c / 6000000</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Heap %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>