force-app/main/default/objects/Log__c/fields/Heap_Used__c.field-meta.xml
<CustomField>
    <fullName>Heap_Used__c</fullName>
    <label>Heap Used</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>