force-app/main/default/objects/Log__c/fields/Query__c.field-meta.xml
<CustomField>
    <fullName>Query__c</fullName>
    <formula>Queries_Used__c / 100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Query %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>