force-app/main/default/objects/Log__c/fields/Query_Rows__c.field-meta.xml
<CustomField>
    <fullName>Query_Rows__c</fullName>
    <formula>Query_Rows_Used__c / 50000</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Query Rows %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>