force-app/main/default/objects/Log__c/recordTypes/Limit_Profile.recordType-meta.xml
<RecordType>
    <fullName>Limit_Profile</fullName>
    <active>true</active>
    <label>Limit Profile</label>
</RecordType>