force-app/main/default/objects/Log__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Source__c</columns>
    <columns>Severity__c</columns>
    <columns>Text__c</columns>
    <columns>CreatedWithTime__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>