force-app/main/default/objects/Log__c/listViews/Broker_Updates.listView-meta.xml
<ListView>
    <fullName>Broker_Updates</fullName>
    <columns>NAME</columns>
    <columns>Source__c</columns>
    <columns>Severity__c</columns>
    <columns>Text__c</columns>
    <columns>CreatedWithTime__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Source__c</field>
        <operation>equals</operation>
        <value>Broker Update Platform Event</value>
    </filters>
    <label>Broker Updates</label>
</ListView>