force-app/main/default/objects/Log__c/listViews/Platform_Events.listView-meta.xml
<ListView>
    <fullName>Platform_Events</fullName>
    <columns>NAME</columns>
    <columns>Severity__c</columns>
    <columns>Source__c</columns>
    <columns>Text__c</columns>
    <columns>OBJECT_ID</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Source__c</field>
        <operation>contains</operation>
        <value>Platform</value>
    </filters>
    <label>Platform Events</label>
</ListView>