force-app/main/default/objects/Log__c/listViews/Submission_Updates.listView-meta.xml
<ListView>
    <fullName>Submission_Updates</fullName>
    <columns>NAME</columns>
    <columns>Text__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Source__c</field>
        <operation>equals</operation>
        <value>Submission Update</value>
    </filters>
    <label>Submission Updates</label>
</ListView>